--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "react-icons": "^4.7.1",
     "react-tsparticles": "^2.9.3",
     "reactstrap": "^9.1.6",
-    "tsparticles": "^2.9.3"
+    "tsparticles": "^2.9.3",
+    "swiper": "^9.0.0",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
