--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-tsparticles": "^2.9.3",
     "tsparticles": "^2.9.3",
     "react-icons": "^4.7.1",
-    "@headlessui/react": "^1.7.8"
+    "@headlessui/react": "^1.7.8",
+    "swiper": "^9.0.0",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
