--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-tsparticles": "^2.9.3",
     "tsparticles": "^2.9.3",
     "react-icons": "^4.7.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "@headlessui/react": "^1.7.8",
     "swiper": "^9.0.0",
     "tailwind-scrollbar-hide": "^1.1.7"
