--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "react-tsparticles": "^2.9.3",
     "reactstrap": "^9.1.6",
     "tsparticles": "^2.9.3",
+    "react-icons": "^4.7.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "@headlessui/react": "^1.7.8",
     "swiper": "^9.0.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
