--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.14",
+    "@lottiefiles/react-lottie-player": "^3.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
