--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "dependencies": {
         "@headlessui/react": "^1.7.8",
         "@heroicons/react": "^2.0.14",
+        "@lottiefiles/react-lottie-player": "^3.5.2",
         "framer-motion": "^9.0.1",
+        "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.7.1"
