--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-tsparticles": "^2.9.3",
-    "tsparticles": "^2.9.3"
+    "tsparticles": "^2.9.3",
+    "react-icons": "^4.7.1",
+    "@headlessui/react": "^1.7.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
