--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
-    "name": "incident-2023",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "preview": "vite preview"
-    },
-    "dependencies": {
-        "@headlessui/react": "^1.7.8",
-        "@heroicons/react": "^2.0.14",
-        "@lottiefiles/react-lottie-player": "^3.5.2",
-        "framer-motion": "^9.0.1",
-        "prop-types": "^15.8.1",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-icons": "^4.7.1"
-    },
-    "devDependencies": {
-        "@types/react": "^18.0.26",
-        "@types/react-dom": "^18.0.9",
-        "@vitejs/plugin-react": "^3.0.0",
-        "autoprefixer": "^10.4.13",
-        "postcss": "^8.4.21",
-        "tailwindcss": "^3.2.4",
-        "vite": "^4.0.0"
-    }
+  "name": "incident-2023",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@heroicons/react": "^2.0.14",
+    "@lottiefiles/react-lottie-player": "^3.5.2",
+    "framer-motion": "^9.0.1",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-tsparticles": "^2.9.3",
+    "tsparticles": "^2.9.3",
+    "react-icons": "^4.7.1",
+    "@headlessui/react": "^1.7.8"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@vitejs/plugin-react": "^3.0.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4",
+    "vite": "^4.0.0"
+  }
 }
