--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
     "@mui/system": "^5.11.9",
+    "@syncfusion/ej2-react-navigations": "^20.4.51",
+    "bootstrap": "^5.2.3",
+    "flowbite": "^1.6.3",
+    "flowbite-react": "^0.3.8",
     "framer-motion": "^9.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-icons": "^4.7.1",
     "react-tsparticles": "^2.9.3",
     "tsparticles": "^2.9.3"
-
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
