--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,11 +17,10 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
 
-      - name: Install dependencies
-        uses: bahmutov/npm-install@v1.8.29
-
       - name: Build project
-        run: npm run build
+        run: | 
+          npm install
+          npm run build
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v3
