modified modal and added events details

--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.8",
     "@heroicons/react": "^2.0.14",
     "@lottiefiles/react-lottie-player": "^3.5.2",
     "framer-motion": "^9.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-tsparticles": "^2.9.3",
-    "tsparticles": "^2.9.3",
     "react-icons": "^4.7.1",
+    "react-markdown": "^8.0.5",
     "react-slick": "^0.29.0",
+    "react-tsparticles": "^2.9.3",
     "slick-carousel": "^1.8.1",
-    "@headlessui/react": "^1.7.8",
     "swiper": "^9.0.0",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tsparticles": "^2.9.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
