--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@headlessui/react": "^1.7.8",
-    "@headlessui/react": "^1.7.8",
     "@heroicons/react": "^2.0.14",
     "@lottiefiles/react-lottie-player": "^3.5.2",
     "@mui/icons-material": "^5.11.9",
@@ -32,18 +31,12 @@
     "react-markdown": "^8.0.5",
     "react-slick": "^0.29.0",
     "react-feather": "^2.0.10",
-    "react-icons": "^4.7.1",
     "react-tsparticles": "^2.9.3",
     "reactstrap": "^9.1.6",
     "tsparticles": "^2.9.3",
-    "react-icons": "^4.7.1",
-    "react-markdown": "^8.0.5",
-    "react-slick": "^0.29.0",
-    "react-tsparticles": "^2.9.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^9.0.0",
-    "tailwind-scrollbar-hide": "^1.1.7",
-    "tsparticles": "^2.9.3"
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
