Competitions:Add Gaming events (#54)
* Res Card

* Res Card

* render competition cards by passing props stored in competition.js

* mionr ui change

* placed coins

* coins added

* added competition categories

* added coins

* updating coins

* filter functionable

* Added test constants

* changed hover transition

* border bug-fix and added info button

* minor change

* minor chagne to how filters are displayed

* Added dummy scaled coins

* bug coins fixed

* minor change

* dropdown

* fixed dropdown

* fixed cluttered dropdown

* Added modal to display more info for each competition

* fix dropdown title

* fixed responsiveness

* minor fix

* Changed modal styling and fixed filtering bug

* Changed categories and added react-icons

* minor dropdown fix

* minor changes

* minor changes

* fixed changes

* placed sabers as modal close button and minor change to overflow scrollbar hiding code

* mionr UI change in close button of modal

* added basic animations using framer-motion

* fixed scrolling bug

* fixed modal bugs and dropdown arrow

* minor fix

* minor changes

* idea of pagination

* paginator comp

* minor UI change in padding of modal heading and buttons

* materialUI paginator

* dropdown styles

* Revert "dropdown styles"

This reverts commit 9eeef68d2cc7de7d7b7b93d63259fa16f7f7c157.

* Revert "materialUI paginator"

This reverts commit 99ace43d6e91eccd920bb984d47a3dd4ef2cdc9b.

* drpdwn

* initial commit icare

* setup for i-care

* minor changes

* Added show more button and diabled hover effects on mobiles

* Added coins

* compressed images

* added carousel

* fixing bugs

* added indicators

* corrected padding

* minor change

* mionr fix

* packages

* Added changes made by mardav

* improved responsiveness and minor changes

* Updated Modal

* Resized Assets

* fixed dropdown and cards

* changed three p

--- a/package.json
+++ b/package.json
@@ -27,16 +27,16 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-icons": "^4.7.1",
     "react-markdown": "^8.0.5",
     "react-slick": "^0.29.0",
-    "react-feather": "^2.0.10",
     "react-tsparticles": "^2.9.3",
     "reactstrap": "^9.1.6",
-    "tsparticles": "^2.9.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^9.0.0",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tsparticles": "^2.9.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
